Make setOutputSurface, encrypted capabilities. Blacklist hi6210sft.

No need for platform specific define for encrypted hardware decode
support when we have a capability system; thus make support for
encrypted streams a capability.

We now have a device with broken MediaCodec.setOutputSurface(), so
make it a capability and blacklist the hardware platform common to
99% of the crashes (hi6210sft).

BUG=683401
TEST=p8lite no longer hangs on fullscreen transition.
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2677983004
Cr-Commit-Position: refs/heads/master@{#448514}

Former-commit-id: 8a5efb12a76b24de92a20a23f56d20aa9e22338b